# ontoNgn

./: .env.example  .env.template  .gitignore  LICENSE  README.md  pyproject.toml  run_lmstudio.py
.agents/rules/: design-and-planning.md  design_document_rules.md  implementation.md  mandatory-behavioral-rules.md
.agents/workflows/: append-decisions-report.md  check.md  dev.md  docs-check-impl.md  docs-check.md
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/core/: config.py  dependencies.py
app/usecases/: generate_ontology.py  graph_crud.py
docs/: 00_document_structure.md  01_specification.md  02_system_design.md  03_data_model_design.md  04_technology_decisions_report.md  05_development_environment_guide.md  architecture_design.md  detailed_design.md  ontology_model_design.md  specification.md  system_design.md  technology_decisions_report.md  zz_development_status.md
docs/detail_design/: 01_document_ingestion.md  01_workflow_orchestrator.md  02_document_render.md  03_vision_extraction.md  04_ontology_generation.md  05_ontology_evolution.md  05_ontology_linking.md  06_ontology_evolution.md  06_schema_compiler.md  07_graph_repository.md  07_schema_compiler.md  08_console_ui.md  08_schema_evolution_api.md  09_graph_repository.md  10_console_ui.md  10_graph_visualization.md  11_graph_visualization.md  12_document_management.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
templates/: graph.html
tests/: test_main.py
tests/manual_tests/: verify_db_contents.py
(+43 files in other folders)
