[project]
name = "ontrogy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "kuzu>=0.11.3",
    "neo4j>=6.2.0",
    "openai>=2.38.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rdflib>=7.6.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.14",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, pyflakes, isort

[tool.mypy]
strict = true

[tool.pyright]
include = ["app", "tests"]
extraPaths = ["."]

# 47行目以降をこれに置き換えてください

[tool.taskipy.tasks]
check = "ruff check . && ruff format . && dmypy run -- ."
cleanup = "rm -rf tests/test_output.kuzu_db tests/integration/manual_tests/integration.kuzu_db && echo cleaned up DB files"
check-frontend = "cd frontend && pnpm lint && pnpm test && pnpm build"
ci = "task cleanup && task check && task check-frontend && APP_ENV=test pytest"
setup-dev-db = "APP_ENV=dev PYTHONPATH=. python tests/integration/manual_tests/setup_dev_db.py"
start-devsv = "task setup-dev-db && APP_ENV=dev uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"